AP-127 removes not used initial and description parameter in /bff/app_access/v1/server-db/iamuserappdatapost and post and description parameter in /bff/app_access/v1/server-db/iamuserappdatapost/${resource_id_number} and put in OpenApi.json, updates parameters in post() and update() using tree shaking pattern in IamUserAppDataPost.js, updates Id column in appUserSettingsGet() and Description column in appUserSettingDelete() in app.js in app 4 and updates parameters in create_iam_user_app_data_post() in installation.js to satisfy OWASP requirement 15.3.5, updates log texts with object names and icons in postDemo() and deleteDemo() in installation.js , increases font-size for common_font_log to 0.8em in common.css
